--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,8 +9,16 @@
   </head>
 
   <body>
+    <%= link_to root_path do %>
+    <h1> fARmer </h1>
+    <% end %>
       <p class="notice"><%= notice %></p>
       <p class="alert"><%= alert %></p>
+      <% if user_signed_in? %>
+        <%= link_to('Logout', destroy_user_session_path, :method => :delete) %>        
+      <% else %>
+        <%= link_to('Login', new_user_session_path)  %>  
+      <% end %>
     <%= yield %>
   </body>
 </html>
