--- a/app/views/plants/index.html.erb
+++ b/app/views/plants/index.html.erb
@@ -2,18 +2,26 @@
 
 <h1>Plants</h1>
 
-<table>
+<table class="plant-table">
   <thead>
     <tr>
-      <th>Name</th>
-      <th colspan="3"></th>
+      <th></th>
+      <th class="plant-header">Name</th>
+      <th class="plant-header">Expected Yield (lbs)</th>
+      <th class="plant-header" colspan="3"></th>
     </tr>
   </thead>
 
   <tbody>
     <% @plants.each do |plant| %>
-      <tr>
-        <td><%= plant.name %></td>
+    <tr >
+      <td>
+        <div class="image-div">
+          <%= image_tag(plant.image, class: 'plant-image') %>
+        </div>
+      </td>
+      <td><%= plant.name %></td>
+      <td><%= plant.expected_yield %></td>
         <td><%= link_to 'Show', plant %></td>
         <td><%= link_to 'Edit', edit_plant_path(plant) %></td>
         <td><%= link_to 'Destroy', plant, method: :delete, data: { confirm: 'Are you sure?' } %></td>
