removed force ssl

--- a/app/assets/stylesheets/plants.scss
+++ b/app/assets/stylesheets/plants.scss
@@ -11,7 +11,7 @@
     padding: 10px;
 }
 
-table.plant-table {
+table.table {
     border-collapse: collapse;
     width: 100%;
 }
@@ -22,7 +22,7 @@ table, th, td {
 }
 
 
-th.plant-header {
+th.table-header {
     height: 50px;
     text-align: center;
 }
