--- a/app/views/plants/index.html.erb
+++ b/app/views/plants/index.html.erb
@@ -2,13 +2,13 @@
 
 <h1>Plants</h1>
 
-<table class="plant-table">
+<table class="table">
   <thead>
     <tr>
       <th></th>
-      <th class="plant-header">Name</th>
-      <th class="plant-header">Expected Yield (lbs)</th>
-      <th class="plant-header" colspan="3"></th>
+      <th class="table-header">Name</th>
+      <th class="table-header">Expected Yield (lbs)</th>
+      <th class="table-header" colspan="3"></th>
     </tr>
   </thead>
 
