--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,9 +1,8 @@
 <h1> Welcome to fARmer! </h1>
 
 <div class="greeting">
-    <% if user_signed_in? %>
-        Hello <%= current_user.name %>!
-    <% end %>
-    <%= link_to "Create a plot", new_plot_url %>
+    We are a groundbreaking new product that makes urban gardening easy and fun.
+    By technology such as augmented reality, you and your neighbors can plan out your
+    garden easily and quickly. 
 </div>
 
