--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,8 +1,10 @@
 <p id="notice"><%= notice %></p>
 
-<p>
-  <strong>Name:</strong>
-  <%= @user.name %>
+
+
+<h3>  <%= @user.name %> </h3>
+
   <strong>Email</strong>
+<p>
   <%= @user.email %>
 </p>
