--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -2,7 +2,8 @@
 
 <div class="greeting">
     We are a groundbreaking new product that makes urban gardening easy and fun.
-    By technology such as augmented reality, you and your neighbors can plan out your
-    garden easily and quickly. 
+    By using cutting edge technology such as augmented reality, you and your
+    neighbors can plan out your urban ecosystem easily and quickly. More
+    importantly, by creating a 
 </div>
 
