--- a/app/views/communities/index.html.erb
+++ b/app/views/communities/index.html.erb
@@ -14,15 +14,12 @@
   <tbody>
     <% @communities.each do |community| %>
       <tr>
-        <td><%= community.name %></td>
+        <td><%= link_to community.name, community_path(community) %></td>
         <td><%= community.address %></td>
         <td> <iframe
           width="200" height="150" frameborder="0" style="border:0"
-src="https://www.google.com/maps/embed/v1/place?q=place_id:ChIJtYX1Xjn2wokR7Mj2eOaubCw&key=AIzaSyDz83RWp8N_hm3hBLQOg__wSCDWR4_rt08" allowfullscreen></iframe>
-          </td>
-        <td><%= link_to 'Show', community %></td>
-        <td><%= link_to 'Edit', edit_community_path(community) %></td>
-        <td><%= link_to 'Destroy', community, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+               src="https://www.google.com/maps/embed/v1/place?q=place_id:ChIJtYX1Xjn2wokR7Mj2eOaubCw&key=AIzaSyDz83RWp8N_hm3hBLQOg__wSCDWR4_rt08" allowfullscreen></iframe>
+        </td>
       </tr>
     <% end %>
   </tbody>
