--- a/app/views/plots/show.html.erb
+++ b/app/views/plots/show.html.erb
@@ -10,5 +10,10 @@
   <%= @plot.plant_id %>
 </p>
 
+<p>
+  <strong>Community:</strong>
+  <%= @plot.community_id %>
+</p>
+
 <%= link_to 'Edit', edit_plot_path(@plot) %> |
 <%= link_to 'Back', plots_path %>
