--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,9 +1,12 @@
-<h1> Welcome to fARmer! </h1>
+<div class="content">
+<h1> Introducing fARmer </h1>
 
 <div class="greeting">
     We are a groundbreaking new product that makes urban gardening easy and fun.
     By using cutting edge technology such as augmented reality, you and your
     neighbors can plan out your urban ecosystem easily and quickly. More
-    importantly, by creating a 
+    importantly, by creating a self sufficient ecommunity, we empower those who
+    live in so called food deserts.
+</div>
 </div>
 
