--- a/app/views/communities/index.html.erb
+++ b/app/views/communities/index.html.erb
@@ -2,28 +2,19 @@
 
 <h1>Communities</h1>
 
-<table class="table">
-  <thead>
-    <tr>
-      <th class="table-header"> Name</th>
-      <th class="table-header" >Address</th>
-      <th class="table-header" colspan="3"></th>
-    </tr>
-  </thead>
 
-  <tbody>
     <% @communities.each do |community| %>
-      <tr>
-        <td><%= link_to community.name, community_path(community) %></td>
-        <td><%= community.address %></td>
-        <td> <iframe
-          width="200" height="150" frameborder="0" style="border:0"
-               src="https://www.google.com/maps/embed/v1/place?q=place_id:ChIJtYX1Xjn2wokR7Mj2eOaubCw&key=AIzaSyDz83RWp8N_hm3hBLQOg__wSCDWR4_rt08" allowfullscreen></iframe>
-        </td>
-      </tr>
+        <div class="square">
+          <div class="content">
+            <div id="map-container">
+              <div id="map-canvas"></div>
+            </div>
+            <h2><%= link_to community.name, community_path(community) %></h2>
+            <h3> <%= community.address %> </h3>
+        </div>
+        </div>
     <% end %>
-  </tbody>
-</table>
+
 
 <br>
 
