--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -5,15 +5,19 @@
     <%= csrf_meta_tags %>
 
     <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
+    <link href="https://fonts.googleapis.com/css?family=Open+Sans|Slabo+27px" rel="stylesheet">
+    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyD3rZi_w2QlpNoBh_VeeefadeGfp1aQsmM&callback=communityMap">
     <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
   </head>
 
   <body>
-    <%= link_to root_path do %>
-    <h1> fARmer </h1>
+    <%= link_to root_path, :class => 'header-link' do %>
+    <h1 class="header"> fARmer </h1>
     <% end %>
-      <p class="notice"><%= notice %></p>
-    <p class="alert"><%= alert %></p>
+    <% if notice || alert  %>
+        <p class="notice"><%= notice %></p>
+        <p class="alert"><%= alert %></p>
+    <% end  %>
     <span class="navbar">
       <strong class="navbar-link">
         <%= link_to('Communities', communities_path) %>
