--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -5,6 +5,8 @@
     <%= csrf_meta_tags %>
 
     <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
+    <%= favicon_link_tag %>
+    <meta name="theme-color" content="#ffffff">
     <link href="https://fonts.googleapis.com/css?family=Open+Sans|Slabo+27px" rel="stylesheet">
     <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyD3rZi_w2QlpNoBh_VeeefadeGfp1aQsmM&callback=communityMap">
     <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
