--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -29,7 +29,10 @@
         <%= link_to('Logout', destroy_user_session_path, :method => :delete) %>
       </strong>
       <strong class="navbar-link">
-        <%= link_to('Create Plot', new_plot_path) %>
+          <%= link_to('Create Plot', new_plot_path) %>
+      </strong>
+      <strong class="navbar-link">
+          <%= link_to('Add Produce', new_produce_path) %>
       </strong>
       <% else %>
       <strong class="navbar-link">
