--- a/app/views/communities/index.html.erb
+++ b/app/views/communities/index.html.erb
@@ -1,8 +1,54 @@
 <p id="notice"><%= notice %></p>
 
+
 <h1>Communities</h1>
 
+        <div style="height: 100%;" id="map"></div>
+        <script src="https://code.jquery.com/jquery-3.2.1.min.js" integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4=" crossorigin="anonymous"></script>
+        <script>
 
+         var url = 'http://arfarmer.org/communities_json';
+
+         $.getJSON(url, function(data) {
+             initMap(data);
+         });
+
+         var hi = "https://maps.googleapis.com/maps/api/geocode/json?address=TRACKTRACKTRACK&key=AIzaSyDD4D0sdKpinsipvNkqe1UVGgMb7GmNqJ8";
+
+         function initMap(data) {
+             var map = new google.maps.Map(document.getElementById('map'), {
+                 zoom: 12,
+                 center: { lat: 40.7831, lng: -73.9712 },
+                 mapTypeId: 'terrain',
+             });
+
+             for (var c in data) {
+                 comm = data[c];
+                 var add = comm.address.replace(' ',',');
+                 var d = hi.replace('TRACKTRACKTRACK',add);
+                 $.getJSON(d, function(data) {
+                     // Add the circle for this city to the map.
+                     var cityCircle = new google.maps.Circle({
+                         strokeColor: '#FF0000',
+                         strokeOpacity: 0.8,
+                         strokeWeight: 2,
+                         fillColor: '#FF0000',
+                         fillOpacity: 0.35,
+                         map: map,
+                         center: {lat: data["results"][0]["geometry"]["location"]["lat"], lng: data["results"][0]["geometry"]["location"]["lng"]},
+                         radius: 200,
+                     });
+                     google.maps.event.addListener(cityCircle, 'click', function () {
+                         window.open("http://arfarmer.org/communities/" + comm.id,"_self")
+                     });
+                 });
+             }
+         }
+        </script>
+        <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDD4D0sdKpinsipvNkqe1UVGgMb7GmNqJ8&callback=initMap"></script>
+
+
+<!--
     <% @communities.each do |community| %>
         <div class="square">
           <div class="content">
@@ -17,5 +63,5 @@
 
 
 <br>
-
+-->
 <%= link_to 'New Community', new_community_path %>
