--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -26,13 +26,13 @@
       </strong>
       <% if user_signed_in? %>
       <strong class="navbar-link">
-        <%= link_to('Logout', destroy_user_session_path, :method => :delete) %>
-      </strong>
-      <strong class="navbar-link">
           <%= link_to('Create Plot', new_plot_path) %>
       </strong>
       <strong class="navbar-link">
           <%= link_to('Add Produce', new_produce_path) %>
+      </strong>
+      <strong class="navbar-link">
+          <%= link_to('Logout', destroy_user_session_path, :method => :delete) %>
       </strong>
       <% else %>
       <strong class="navbar-link">
@@ -43,6 +43,8 @@
       </strong>
       <% end %>
     </span>
-    <%= yield %>
+    <div class="body">
+        <%= yield %>
+    </div>
   </body>
 </html>
