--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -25,6 +25,9 @@
         <%= link_to('Communities', communities_path) %>
       </strong>
       <% if user_signed_in? %>
+          <strong class="navbar-link">
+              <%= link_to('My Plots', user_path(current_user)) %>
+          </strong>
       <strong class="navbar-link">
           <%= link_to('Create Plot', new_plot_path) %>
       </strong>
