--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,10 +1,24 @@
 <p id="notice"><%= notice %></p>
 
 
+<h3> <%= @user.name %>'s Plots </h3>
+<center>
+<% @user.plots.each do |plot| %>
+<h4>
+  My
+  <% plant = Plant.find(plot.plant_id) %>
+  <%= plant.name.pluralize %>
+</h4>
 
-<h3>  <%= @user.name %> </h3>
-
-  <strong>Email</strong>
+Expected yield is <%= plant.expected_yield %> lbs, assuming a 2 square foot plot
 <p>
-  <%= @user.email %>
+  <strong>Community:</strong>
+  <%= Community.find(plot.community_id).name %>
 </p>
+
+<%= image_tag plant.image, class: 'large-plant-image' %> <br>
+<div class="destroy-plot">
+<%= link_to 'Finished harvesting?', plot_path(plot), method: :delete %> 
+</div>
+<% end %>
+</center>
