--- a/app/views/plots/show.html.erb
+++ b/app/views/plots/show.html.erb
@@ -6,7 +6,6 @@
   <%= plant.name.pluralize %>
 </h3>
 
-Estimated yield is <%= plant.expected_yield %> lbs, assuming a 2 square foot plot
 <p>
   <strong>Community:</strong>
   <%= Community.find(@plot.community_id).name %>
@@ -15,4 +14,4 @@ Estimated yield is <%= plant.expected_yield %> lbs, assuming a 2 square foot plo
 <%= image_tag plant.image, class: 'large-plant-image' %> <br>
 
 <%= link_to 'Destroy', plot_path(@plot), method: :delete %> 
-<%= link_to 'Back', community_path(current_user.community_id) %>
+<%= link_to 'Back', plots_path %>
