--- a/app/views/plots/show.html.erb
+++ b/app/views/plots/show.html.erb
@@ -1,17 +1,19 @@
 <p id="notice"><%= notice %></p>
 
-<h3>
-  <%= @plot.user.name %>'s
-  <% plant = Plant.find(@plot.plant_id) %>
-  <%= plant.name.pluralize %>
-</h3>
+<p>
+  <strong>User:</strong>
+  <%= @plot.user_id %>
+</p>
+
+<p>
+  <strong>Plant:</strong>
+  <%= @plot.plant_id %>
+</p>
 
 <p>
   <strong>Community:</strong>
-  <%= Community.find(@plot.community_id).name %>
+  <%= @plot.community_id %>
 </p>
 
-<%= image_tag plant.image, class: 'large-plant-image' %> <br>
-
-<%= link_to 'Destroy', plot_path(@plot), method: :delete %> 
+<%= link_to 'Edit', edit_plot_path(@plot) %> |
 <%= link_to 'Back', plots_path %>
