--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,7 +8,7 @@
     <%= favicon_link_tag %>
     <meta name="theme-color" content="#ffffff">
     <link href="https://fonts.googleapis.com/css?family=Open+Sans|Slabo+27px" rel="stylesheet">
-    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyD3rZi_w2QlpNoBh_VeeefadeGfp1aQsmM&callback=communityMap">
+
     <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
   </head>
 
@@ -26,7 +26,7 @@
       </strong>
       <% if user_signed_in? %>
       <strong class="navbar-link">
-        <%= link_to('Logout', destroy_user_session_path, :method => :delete) %>
+        <%= link_to 'Logout', destroy_user_session_path, method: :delete%>
       </strong>
       <strong class="navbar-link">
           <%= link_to('Create Plot', new_plot_path) %>
