--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -5,8 +5,10 @@
     <%= csrf_meta_tags %>
 
     <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
+    <%= favicon_link_tag %>
+    <meta name="theme-color" content="#ffffff">
     <link href="https://fonts.googleapis.com/css?family=Open+Sans|Slabo+27px" rel="stylesheet">
-    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyD3rZi_w2QlpNoBh_VeeefadeGfp1aQsmM&callback=communityMap">
+
     <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
   </head>
 
@@ -24,10 +26,13 @@
       </strong>
       <% if user_signed_in? %>
       <strong class="navbar-link">
-        <%= link_to('Logout', destroy_user_session_path, :method => :delete) %>
+        <%= link_to 'Logout', destroy_user_session_path, method: :delete%>
       </strong>
       <strong class="navbar-link">
-        <%= link_to('Create Plot', new_plot_path) %>
+          <%= link_to('Create Plot', new_plot_path) %>
+      </strong>
+      <strong class="navbar-link">
+          <%= link_to('Add Produce', new_produce_path) %>
       </strong>
       <% else %>
       <strong class="navbar-link">
